--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nanoid": "^2.1.11",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.7",
+    "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1"
